--- a/summaries/summary4_raw_hic.Rmd
+++ b/summaries/summary4_raw_hic.Rmd
@@ -28,9 +28,16 @@ The normalization procedure consists in dividing each entry in the contact matri
 
 $M^*_{i,j}=\frac{M_{i,j}}{V_{KR}[\frac{i}{res}]*V_{KR}[\frac{j}{res}]}$
 
-Where $M$ is the raw matrix and $M^*$ the normalized matrix.
+Where $M_{i,j}$ is an entry from the raw matrix and $M^*_{i,j}$ corresponding normalized entry.
 
 The normalization algorithm did not converge for all entries, so there are missing values in the vector. The values that could not be normalized are considered as 0 in the matrix (i.e. not listed in sparse format).
+
+#2. Summing interactions:
+
+I computed interactions in a similar manner that Rao and al (2014) computed the insulation score. A diamond of width _w_ is slid over the diagonal of matrix _M_ of _n_ dimensions. Interactions are summed inside the diamond at each position _d_ along the diagonal. I used a 100kb diamond in the algorithm, as recommanded by Rao and al.
+
+$\left\{\begin{matrix}1\leq w\leq \frac{n}{2}+1 \\ \forall d\in\left \{ w , ... , n-\left ( w-1 \right ) \right \}\end{matrix}\right. V_{d}=\sum_{i=d-(w-1)}^{d}\sum_{j=d}^{d+w}M_{i,j}$
+
 
 #2. TAD boundaries
 
